feat: Haberler sayfası için Firebase Güvenlik Kuralları güncellendi ve toplu silme eklendi

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,8 +1,5 @@
 {
   "appId": "com.justmsku.app",
-  "appName": "Just MSKU",
-  "webDir": "docs", 
-  "server": {
-    "androidScheme": "https"
-  }
+  "appName": "vscode",
+  "webDir": "docs"
 }
