feat: Haberler sayfasındaki mobil alt navigasyon çakışması giderildi ve genel mobil uyum düzeltmeleri yapıldı.

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,14 @@
 {
   "appId": "com.justmsku.app",
-  "appName": "vscode",
-  "webDir": "docs"
+  "appName": "Just MSKU",
+  "webDir": "docs",
+  "bundledWebRuntime": false,
+  "server": {
+    "androidScheme": "https"
+  },
+  "plugins": {
+    "SplashScreen": {
+      "launchShowDuration": 0
+    }
+  }
 }
